Update advanced search UI
* Restructure `instance.advanced_search_fields` and `instance.DEFAULT_SEARCH_FIELDS` to match advanced search categories in UI
* Create partials in new template folder `treemap/partials/advanced_search`
* Add `active` class to dropdowns and "Advanced" button when an advanced search is in effect
* Disable a model's search fields when that model isn't in the display filters
* Remove CSS for no-longer-used advanced search sliders

Note: Temporarily hard-coding `rainBarrel.capacity` and `bioswale.udf:Perennial Plants` so styling work can proceed

--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -121,6 +121,10 @@
         padding: 12px 0;
     }
 
+    #search-advanced.filter-active {
+        font-weight: bold;
+    }
+
     .btn-group {
         width: 100%;
     }
