Hide panning controls on street view.
I attempted to hide the full screen button but as far as I can tell
there is no option to do so.

There is also no way to minimize the address info box, so I left it in
place but increased the height of the streetview element so it did not
get in the way as much.

Connects to #2364

--- a/opentreemap/treemap/css/sass/partials/pages/_treedetails.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_treedetails.scss
@@ -98,10 +98,14 @@
     border-radius: 9px;
 }
 
-// Needed because bootstrap breaks street view on firefox
-// by setting max-width: 100% on all <img> tags
-.street-view-small img {
-    max-width: none;
+.street-view-small {
+    height: 440px;
+
+    // Needed because bootstrap breaks street view on firefox
+    // by setting max-width: 100% on all <img> tags
+    .street-view-small img {
+        max-width: none;
+    }
 }
 
 #sidebar {
