Update field disabler now that "empty plot" display filter works again
* When showing trees & empty plots, enable both tree & plot fields
* When showing trees & not empty plots, enable both tree & plot fields
* When showing empty plots & not trees, enable just plot fields

--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -47,6 +47,7 @@
         }
 
         .field-group-message {
+            display: none;
             font-weight: bold;
             font-style: italic;
         }
