styled advanced search bar

--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -117,7 +117,7 @@
     min-width: 100px;
 
     #perform-search {
-        margin-bottom: 7px;
+        margin-top: 7px;
         padding: 12px 0;
     }
 
