--- a/opentreemap/treemap/templates/treemap/partials/advanced_search/dropdown.html
+++ b/opentreemap/treemap/templates/treemap/partials/advanced_search/dropdown.html
@@ -1,7 +1,7 @@
 {% load form_extras %}
 
 {% if fields %}
-    <div class="dropdown" style="display:inline-block">
+    <div class="dropdown">
         <button id="adv-search-category-{{ category }}"
                 class="btn btn-default dropdown-toggle"
                 type="button" data-toggle="dropdown"
