--- a/opentreemap/treemap/templates/treemap/partials/advanced_search/tree_care.html
+++ b/opentreemap/treemap/templates/treemap/partials/advanced_search/tree_care.html
@@ -11,7 +11,7 @@
 
 {# Note: "udfc_search_data" and "udfc" are defined in the template that includes this one. #}
 
-<div class="udfc-search clearfix hidden-xs">
+<div class="udfc-search clearfix">
   <span>{% trans "I am looking for" %}</span>
   <label class="udfc-label">
     <select id="udfc-search-model">
