--- a/opentreemap/treemap/templates/treemap/partials/advanced_search/display.html
+++ b/opentreemap/treemap/templates/treemap/partials/advanced_search/display.html
@@ -13,7 +13,7 @@
 
 {% block dropdown_content %}
     {% for field in fields %}
-        <span>
+        <div class="form-group">
             <input checked="checked"
                  type="checkbox"
                  id="{{ field.id }}"
@@ -21,6 +21,6 @@
             <label for="{{ field.id }}">
                 {{ field.label }}
             </label>
-        </span>
+        </div>
     {% endfor %}
 {% endblock %}
