Fix error handling on the tree details quick edit
 - Empty error boxes were appearing - fixed via CSS rule
 - Errors due to out of bounds plots were not appearing, fixed by adding
   an element to display mapFeature.geom errors.

Connects to #2393

--- a/opentreemap/treemap/css/sass/partials/_error.scss
+++ b/opentreemap/treemap/css/sass/partials/_error.scss
@@ -65,3 +65,8 @@
         line-height: 1.6rem;
     }
 }
+
+// Hides error bubbles when there is no error message
+.alert:empty {
+    display: none !important;
+}
