Upgrade typeahead.js from 0.10.1 to 0.11.1

--- a/opentreemap/treemap/css/sass/partials/pages/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_map.scss
@@ -160,7 +160,7 @@
     }
 }
 
-span.tt-dropdown-menu {
+.tt-menu {
     margin-top: 10px;
     padding: 0;
     width: 221px;
@@ -183,7 +183,7 @@ span.tt-dropdown-menu {
         left: 10px;
     }
 
-    .tt-suggestions {
+    .tt-dataset {
         max-height: 300px;
         overflow: auto;
         cursor: pointer;
