--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -210,12 +210,16 @@
 {% block templates %}
 {% verbatim %}
 <script id="species-element-template" type="text/x-mustache-template">
+<div>
   <p>{{common_name}}</p>
   <p>{{scientific_name}}</p>
+</div>
 </script>
 <script id="boundary-element-template" type="text/x-mustache-template">
+<div>
   <p>{{name}}</p>
   <p>{{category}}</p>
+</div>
 </script>
 
 <script id="geocode-results-template" type="text/x-mustache-template">
