fixed spacing between sections in pricing modal

--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -602,3 +602,11 @@
     text-align: center;
     border-radius: 4px;
 }
+
+// In order to fix the spacing issue on billing plan modal
+#modal-preview {
+
+    label + p {
+        margin-top: -3px;
+    }
+}
