Fix typo in typeahead bootstrap styling fix
Connects to #2478

--- a/opentreemap/treemap/css/sass/partials/pages/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_map.scss
@@ -177,7 +177,7 @@
 }
 
 // fix typeaheads in form-inline
-.input-group .twitter-typeahead {
+.form-inline .twitter-typeahead {
     float: left;
     margin-right: 4px;
 }
