Update log handling for ecobenefit failures
Failing to calculate the ecobenefits for a tree for reasons like the
species not having a i-Tree code defined for a given i-Tree region is a
regular occurrence in production. This commit attempts to makes it
easier for a log aggregator to combine similar failures and reduces the
severity level of commonplace failures to "info" so they do not drown
out more concerning warning and error messages.

Unexpected failures not related to the species and region configuration
are now logged as errors because we want to see and address those issues
quickly.

--- a/opentreemap/treemap/templates/treemap/partials/plot_eco.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_eco.html
@@ -6,7 +6,7 @@
       <p>Ecosystem benefits cannot be calculated for this species of tree in this location.</p>
       <p>The tree's location falls within a climate region that does not support benefit calculations for this species.</p>
       {% endblocktrans %}
-  {% elif unknown_ecobenefit_error %}
+  {% elif incomplete_eco_data or unknown_eco_failure %}
       {% blocktrans %}
       <!-- TODO: When the ecoservice returns structured errors, replace this with real conditions -->
       <!-- Or, maybe always leave this to avoid 500s -->
